--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -218,7 +218,7 @@ body{
     -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;
 }
 .login_panel input[type="text"],.login_panel input[type="password"]{
-	font-size:12px;
+	font-size:14px;
 	color:#B3B1B1;
 	padding:8px;
 	outline:none;
@@ -1198,7 +1198,7 @@ ul.sub-menu.list-unstyled.sub-menu3 {
 .span_3_of_2 .button{
 	float:left;
 	margin-top:1%;
-	margin-right:250px;
+/* 	margin-right:250px; */
 	line-height:2em;
 }
 .span_3_of_2 .button a,.product-tags .button a{
@@ -1242,7 +1242,7 @@ ul.sub-menu.list-unstyled.sub-menu3 {
 	color:#602D8D; 
 }
 .span_3_of_2 .button{
-	float:right;
+/* 	float:right; */
 	margin-top:1%;
 	line-height:2em;
 }
